--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,7 +5,7 @@
     <h3>{{ product.name }}</h3>
     <p class="price">${{ product.price.toFixed(2) }}</p>
     <button (click)="addToCart(product)" class="add-to-cart">
-      <span>Add to Cart</span>
+      <span>🛒 Add to Cart</span>
     </button>
   </div>
 </div>
