--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -17,7 +17,7 @@
 <ng-template #emptyCart>
   <div class="empty-cart">
     <h2>Your Cart (0)</h2>
-    <img src="assets/empty-cart-image.jpg" alt="Empty cart" class="empty-cart-image" />
+    <img src="assets/images/illustration-empty-cart.svg" alt="Empty cart" class="empty-cart-image" />
     <p>Your added items will appear here</p>
   </div>
 </ng-template>
